# teratermMCP

TTXSamples/: CMakeLists.txt
TTXSamples/TTXMCP/: CMakeLists.txt  ttxmcp.c
tools/teraterm_mcp/: README.md  pyproject.toml
tools/teraterm_mcp/src/teraterm_mcp/: mcp_server.py
